# kiumars-calculator

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  deny.toml  index.html  output.css  styles.css
.github/workflows/: audit.yaml  build.yaml  pages.yaml  release.yaml
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/buttons/: action_button.rs  number_button.rs
