[package]
name = "kiumars-calculator-ui"
version = "0.1.0"
authors = ["Mahdi Baghbani <mahdi-baghbani@azadehafzar.io>"]
description = "Kiumars Calculator UI"
license = "AGPL-3.0-only"
edition = "2021"
publish = false

[profile.release]
# do not perform backtrace for panic on release builds.
panic = "abort"
# perform optimizations on all codegen units.
codegen-units = 1
# "s" for normal optimize or "z" to optimize "aggressively" for size.
opt-level = "z"
# enable link time optimization.
lto = "fat"
# Incremental compilation causes rustc to save additional information to disk which will be reused when recompiling
# the crate, improving re-compile times. The additional information is stored in the target directory.
incremental = false

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"

[workspace]
members = ["src-tauri"]
