[package]
name = "kiumars-calculator"
version = "0.1.0"
authors = ["Mahdi Baghbani <mahdi-baghbani@azadehafzar.io>"]
description = "Kiumars Calculator"
license = "AGPL-3.0-only"
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
